Sat Nov  9 15:00:16 2013  Zachary Scott  <e@zzak.io>

	* io.c: [DOC] ARGF.gets may return nil [Bug #9029] patch by znz

Sat Nov  9 14:54:52 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/*: [DOC] document various constants @steveklabnik [Bug #8812]

Sat Nov  9 14:50:09 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/rss.rb: [DOC] document Time#w3cdtf by @steveklabnik
	  [Bug #8821]

Sat Nov  9 14:29:04 2013  Zachary Scott  <e@zzak.io>

	* ext/dl/cfunc.c: [DOC] fix typo in example [Bug #8944]
	  Patched by Heesob Park

Sat Nov  9 13:59:58 2013  Zachary Scott  <e@zzak.io>

	* lib/test/unit/assertions.rb: [DOC] better example for assert_send()
	  Patch by Andrew Grimm [Bug #8975]

Sat Nov  9 12:45:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def: unify ic_constant_serial and ic_class_serial into one field
	  ic_serial. This is possible because these fields are only ever used
	  exclusively with each other.

	* insns.def: ditto
	* vm_core.h: ditto
	* vm_insnhelper.c: ditto

Sat Nov  9 12:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c: unify names of vm state version counters to 'serial'.
	  This includes renaming 'vm_state_version_t' to 'rb_serial_t',
	  'method_state' to 'method_serial', 'seq' to 'class_serial',
	  'vmstat' to 'constant_serial', etc.

	* insns.def: ditto
	* internal.h: ditto
	* vm.c: ditto
	* vm_core.h: ditto
	* vm_insnhelper.c: ditto
	* vm_insnhelper.h: ditto
	* vm_method.c: ditto

Sat Nov  9 09:22:29 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_page_sweep, rgengc_rememberset_mark): Refactoring.
	  Get bitmaps directly.

Sat Nov  9 09:16:36 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (RVALUE_PROMOTE_INFANT): Refactoring. Remove duplicated nonsense
	  code.

Sat Nov  9 09:04:48 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_marks_test): Bugfix. Fix a struct member name for build
	  with RGENGC_CHECK_MODE.

Sat Nov  9 08:58:23 2013  Masaya Tarui  <tarui@ruby-lang.org>
